# atuinsh-desktop

./: .envrc  .gitignore  .prettierrc  404.html  AGENT.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  atuin.toml  cliff.toml  index.html  llmtools.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sitemap.xml  style.css  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: AtuinDesktop.desktop  Cargo.toml  build.rs  tauri-second-instance.conf.json  tauri.conf.json  tauri.linux.conf.json
backend/.cargo/: config.toml
backend/capabilities/: migrated.json
backend/migrations/ai/: 20260114192057_create_ai_sessions.down.sql  20260114192057_create_ai_sessions.up.sql  20260122172003_add_version_to_ai_sessions.down.sql  20260122172003_add_version_to_ai_sessions.up.sql
backend/migrations/context/: 20251110163938_create_context.down.sql  20251110163938_create_context.up.sql
backend/migrations/exec_log/: 20250227161236_create_blocks.up.sql  20250227161259_create_exec_log.down.sql  20250227161259_create_exec_log.up.sql  20250228162028_add_block_type.down.sql  20250228162028_add_block_type.up.sql  20250228162133_rename_exit_output.down.sql  20250228162133_rename_exit_output.up.sql
backend/migrations/runbooks/: 10_create_operation_log.up.sql  1_create_initial_tables.up.sql  20250311174456_make_legacy_workspaces.down.sql  20250311174456_make_legacy_workspaces.up.sql  20250311194625_add_new_workspaces_table.down.sql  20250311194625_add_new_workspaces_table.up.sql  20250709152124_add_workspace_type_to_workspaces.down.sql  20250709152124_add_workspace_type_to_workspaces.up.sql  20250709190618_make_org_workspaces_online.up.sql  20250722202626_add_backing_dir_to_workspaces.down.sql  20250722202626_add_backing_dir_to_workspaces.up.sql  20251010195720_add_saved_blocks.down.sql  20251010195720_add_saved_blocks.up.sql  20251010200940_add_name_to_saved_blocks.down.sql  20251010200940_add_name_to_saved_blocks.up.sql  20251011000000_create_block_local_state.down.sql  20251011000000_create_block_local_state.up.sql  2_create_workspace_table.up.sql  3_add_workspace_id_to_runbooks.up.sql  4_add_workspace_directory.up.sql  5_add_ydoc_to_runbooks.up.sql  6_create_snapshots_table.up.sql  7_add_source_info_to_runbooks.up.sql  8_add_remote_info_to_runbooks.up.sql  9_add_viewed_at_to_runbook.up.sql
backend/migrations/shared_state/: 20250310191220_create_shared_state_docs.up.sql  20250310191947_create_optimistic_updates.down.sql  20250310191947_create_optimistic_updates.up.sql
backend/src/: advanced_settings.rs  db.rs  file.rs  font.rs  install.rs  kv.rs  llmtools_window.rs  logs.rs  main.rs  main_window.rs  menu.rs  pty.rs  runbooks.rs  secret.rs  secret_cache.rs  shared_state.rs  shellcheck.rs  sqlite.rs  state.rs  templates.rs  util.rs
backend/src/ai/: client.rs  fsm.rs  manager.rs  mod.rs  prompts.rs  session.rs  storage.rs  system_prompt.minijinja.txt  tools.rs  types.rs
backend/src/blocks/: mod.rs  sqlite_context_storage.rs
backend/src/blocks/postgres/: command.rs  decode.rs  mod.rs
backend/src/commands/: ai.rs  audio.rs  block_state.rs  blocks.rs  dependency.rs  events.rs  exec_log.rs  feedback.rs  kubernetes.rs  llmtools.rs  mod.rs  mysql.rs  pty_store.rs  secrets.rs  ssh.rs  ssh_pool.rs  stats.rs  template.rs  updates.rs  workspaces.rs
backend/src/commands/workflow/: serial.rs
backend/src/dotfiles/: aliases.rs  vars.rs
backend/src/run/: migrations.rs  mod.rs  pty.rs  shell.rs
backend/src/runbooks/: block_parse.rs  content.rs  markdown.rs  mod.rs  runbook.rs  ydoc.rs
backend/src/runbooks/content/: link.rs  table.rs  text.rs
backend/src/runtime/: dependency.rs  exec_log.rs  mod.rs  pty_store.rs  runbook.rs  ssh_pool.rs
backend/src/runtime/blocks/: clickhouse.rs  context_blocks.rs  editor.rs  handler.rs  http.rs  mod.rs  postgres.rs  prometheus.rs  registry.rs  script.rs  sqlite.rs  terminal.rs  terminal_integration_test.rs
backend/src/runtime/events/: mod.rs
backend/src/runtime/ssh/: mod.rs  pool.rs  session.rs
backend/src/runtime/workflow/: context_builder.rs  dependency.rs  executor.rs  mod.rs  serial.rs
backend/src/stats/: calc.rs
backend/src/workspaces/: fs_ops.rs  hash_history.rs  manager.rs  mod.rs  offline_runbook.rs  state.rs  workspace.rs
backend/src/workspaces/state/: test_canonical_hash.rs
crates/atuin-desktop-runtime/: Cargo.toml
crates/atuin-desktop-runtime/bindings/: BlockErrorData.ts  BlockFinishedData.ts  BlockLifecycleEvent.ts  BlockOutput.ts  ClientPrompt.ts  ClientPromptResult.ts  DocumentBridgeMessage.ts  ExecutionStatus.ts  GCEvent.ts  KubernetesColumn.ts  PrometheusQueryResult.ts  PrometheusSeries.ts  PrometheusTimeRange.ts  PromptIcon.ts  PromptInput.ts  PromptOption.ts  PromptOptionColor.ts  PromptOptionVariant.ts  PtyMetadata.ts  ResolvedContext.ts  SqlBlockExecutionResult.ts  SqlQueryResult.ts  SqlStatementResult.ts
crates/atuin-desktop-runtime/src/: exec_log.rs  lib.rs
crates/atuin-desktop-runtime/src/blocks/: clickhouse.rs  directory.rs  dropdown.rs  editor.rs  environment.rs  host.rs  http.rs  kubernetes.rs  local_directory.rs  local_var.rs  markdown_render.rs  mod.rs  mysql.rs  pause.rs  postgres.rs  prometheus.rs  query_block.rs  script.rs  sql_block.rs  sqlite.rs  ssh_connect.rs  sub_runbook.rs  terminal.rs  terminal_integration_test.rs  var.rs  var_display.rs
crates/atuin-desktop-runtime/src/client/: bridge.rs  hub.rs  local.rs  message_channel.rs  mod.rs  runbook_loader.rs
crates/atuin-desktop-runtime/src/context/: block_context.rs  fs_var.rs  mod.rs  resolution.rs  storage.rs
crates/atuin-desktop-runtime/src/document/: actor.rs  (+1 more)
crates/atuin-run/: Cargo.toml
crates/atuin-run/src/: app.rs  executor.rs  main.rs  runbooks.rs  runtime.rs  ui.rs
docs/: BLOCK_TYPES.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: ai-assistant.md  getting-started.md  index.md  secrets.md  shell-environment.md  templating.md  troubleshooting.md  workspaces.md
docs/docs/blocks/: index.md
docs/docs/hub/: collaborative-editing.md  getting-started.md  sharing-runbooks.md
(+607 files in other folders)
