[workspace]
members = ["backend", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.11"                                # NOTE - also update this in backend/Cargo.toml if not using `cargo workspaces`
edition = "2021"
authors = ["ellie@atuin.sh", "michelle@atuin.sh"]

[workspace.dependencies]
atuin-desktop-runtime = { path = "crates/atuin-desktop-runtime" }
atuin-desktop-templates = { path = "crates/atuin-desktop-templates" }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "time",
  "chrono",
  "postgres",
  "mysql",
  "sqlite",
  "uuid",
  "bigdecimal",
  "regexp",
] }
tokio = "1.39.3"
uuid = "1.7.0"
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
  "preserve_order",
] } # preserve_order is important for ordering of FS runbook keys
serde_yaml = "0.9"
ts-rs = { version = "11.1.0", features = ["serde-json-impl", "uuid-impl"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
minijinja = { version = "2.12.0", features = [
  "unicode",
  "json",
  "urlencode",
  "loop_controls",
  "key_interning",
  "builtins",
] }
thiserror = "2.0.11"
pretty_assertions = "1.4.1"
typed-builder = "0.21.0"
log = "0.4.26"
dirs = "5.0" # For finding home directory
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
eyre = "0.6"
time = "0.3.36"
bytes = "1.7.1"
klickhouse = { version = "0.14.0", features = ["tls"] }
sqlparser = { git = "https://github.com/atuinsh/datafusion-sqlparser-rs.git", branch = "mkt/parse-sql-with-byte-offsets" }
url = "2.4"
glob = "0.3"
bigdecimal = "0.4"
nix = { version = "0.29.0", features = ["signal"] }
downcast-rs = "2.0.2"
dyn-clone = "1.0.20"
