[package]
name = "atuin-desktop"
version = "0.0.106"
description = "Atuin Desktop"
publish = false
authors = ["you"]
edition = "2021"

[lints.clippy]
enum_variant_names = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
atuin-client = { git = "https://github.com/atuinsh/atuin.git" }
atuin-common = { git = "https://github.com/atuinsh/atuin.git" }
atuin-dotfiles = { git = "https://github.com/atuinsh/atuin.git" }
atuin-history = { git = "https://github.com/atuinsh/atuin.git" }

eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "preserve_order",
] } # preserve_order is important for ordering of FS runbook keys
serde_yaml = "0.9"
time = "0.3.36"
uuid = "1.7.0"
syntect = "5.2.0"
tokio = "1.39.3"
comrak = "0.39.0"
portable-pty = "0.8.1"
vt100 = "0.15.2"
bytes = "1.7.1"
nix = { version = "0.29.0", features = ["signal"] }
lazy_static = "1.5.0"
shellexpand = "3.1.0"
open = "5"
klickhouse = { version = "0.14.0", features = ["tls"] }
sha2 = "0.10"
bigdecimal = "0.4"

tauri = { version = "2.5.1", features = ["tray-icon", "devtools"] }
tauri-plugin-http = "2.4.4"
tauri-plugin-deep-link = "2.3.0"
tauri-plugin-single-instance = { version = "2.2.4", features = ["deep-link"] }
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-process = "2.2.1"
tauri-plugin-fs = "2.3.0"
tauri-plugin-opener = "2.5.0"

humantime = "2.1.0"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
minijinja = { version = "2.3.1", features = [
    "unicode",
    "json",
    "urlencode",
    "loop_controls",
    "key_interning",
] }
walkdir = "2.5.0"
thiserror = "2.0.11"
pretty_assertions = "1.4.1"
typed-builder = "0.21.0"
font-kit = "0.14.2"
log = "0.4.26"
unicode-segmentation = "1.12.0"
env_logger = "0.11.8"
ignore = "0.4"
russh = "0.54"
russh-keys = "0.49"
russh-config = "0.54.0" # For SSH config parsing with glob support
dirs = "5.0" # For finding home directory
glob = "0.3" # For general glob pattern matching
base64 = "0.22"
async-trait = "0.1.88"
notify-debouncer-full = { version = "0.5.0", features = ["serde"] }
toml = "0.9.2"

ts-rs = { version = "11.0.1", features = ["serde-json-impl", "uuid-impl"] }
json-digest = "0.0.16"
trash = "5.2.2"


[dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio",
    "tls-native-tls",
    "time",
    "postgres",
    "mysql",
    "uuid",
    "postgres",
    "bigdecimal",
]

#[lib]
#crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.2.0"

[dev-dependencies]
tempfile = "3.10"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
