[package]
name = "atuin-desktop"
description = "Atuin Desktop"
publish = false
workspace = ".."
version = "0.2.13"            # duplicated here as CN CLI can't handle workspace version
edition.workspace = true

[lints.clippy]
enum_variant_names = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
atuin-client = { git = "https://github.com/atuinsh/atuin.git" }
atuin-common = { git = "https://github.com/atuinsh/atuin.git" }
atuin-dotfiles = { git = "https://github.com/atuinsh/atuin.git" }
atuin-history = { git = "https://github.com/atuinsh/atuin.git" }
atuin-desktop-runtime = { workspace = true }

eyre = { workspace = true }
time = { workspace = true }
syntect = "5.2.0"
comrak = "0.39.0"
vt100 = "0.15.2"
bytes = { workspace = true }
nix = { workspace = true, features = ["signal", "user", "env"] }
lazy_static = "1.5.0"
shellexpand = { workspace = true }
open = "5"
reqwest = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
bigdecimal = { workspace = true }

tauri = { version = "2.9.4", features = ["tray-icon", "devtools"] }
tauri-plugin-http = { version = "2.5.4", features = ["native-tls"] }
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.2"
tauri-plugin-log = { version = "2.7.0", features = ["colored"] }
tauri-plugin-notification = "2.3.3"

rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
humantime = "2.3.0"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
walkdir = "2.5.0"
font-kit = "0.14.2"
unicode-segmentation = "1.12.0"
ignore = "0.4"
glob = { workspace = true }
notify-debouncer-full = { version = "0.6.0", features = ["serde"] }
toml = "0.9.2"
json-digest = "0.0.16"
trash = "5.2.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
typed-builder = { workspace = true }
chrono = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
pretty_assertions = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
config = "0.15.19"
genai = { git = "https://github.com/BinaryMuse/rust-genai", rev = "674535905a966b44104a327dd1e2ca80f4b4a444" }
futures-util = "0.3.31"
indoc = "2.0.7"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.3.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
