[package]
name = "atuin-desktop-runtime"
workspace = "../.."
version.workspace = true
edition.workspace = true

[dependencies]
atuin-desktop-templates = { workspace = true }
russh = "0.54"
russh-keys = "0.49"
russh-config = "0.54.0" # For SSH config parsing with glob support
whoami = "1.5" # For getting current username
base64 = "0.22"
sqlparser = { workspace = true }
typetag = "0.2.21"
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-native-tls",
  "time",
  "chrono",
  "postgres",
  "mysql",
  "sqlite",
  "uuid",
  "bigdecimal",
  "regexp",
] }
typed-builder = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
ts-rs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
time = { workspace = true }
bytes = { workspace = true }
minijinja = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
klickhouse = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true, features = ["signal"] }
url = { workspace = true }
glob = { workspace = true }
bigdecimal = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
portable-pty = "0.8.1"
erased-serde = "0.4.9"
downcast-rs = { workspace = true }
dyn-clone = { workspace = true }
regex = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
httpmock = "0.8"
