[package]
name = "atuin-run"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
atuin-desktop-runtime = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
crossterm = "0.29.0"
vt100 = "0.16.2"
textwrap = "0.16.2"
bytes = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
